# freelance-analytics-cli

./: .dockerignore  .gitignore  Dockerfile  README.md  REPORT.md  docker-compose.yml  main.py  pyproject.toml
core/: config.py  data_analyzer.py  logger.py  schemas.py
tests/: test_analyzer.py  test_analyzer_edge.py
